# design-helper-backend

./: README.md  justfile  pyproject.toml
src/api/: main.py
src/core/services/: abs_ai_search_service.py
src/infrastructure/config/: app_config.py  keyvault.py
src/infrastructure/config/dependency_injection/: di_container.py
src/infrastructure/scripts/: query.py  setup.py
src/infrastructure/services/: ai_search_service.py
